<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.HomeFragment"
    android:scrollbarSize="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/parentLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_20sdp">

        <ImageButton
            android:id="@+id/search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_search"
            android:backgroundTint="@android:color/transparent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/weatherCardIndicator"
            app:layout_constraintBottom_toBottomOf="@id/weatherCardIndicator"
            android:contentDescription="@string/search_button_descrp" />

        <View
            android:id="@+id/weatherCardIndicator"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@id/search"
            app:layout_constraintEnd_toEndOf="@id/settings"/>

        <ImageButton
            android:id="@+id/settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_menu"
            android:backgroundTint="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/weatherCardIndicator"
            app:layout_constraintBottom_toBottomOf="@id/weatherCardIndicator"
            android:contentDescription="@string/setting_button_descrp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/weatherCard"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_30sdp"
            app:layout_constraintTop_toBottomOf="@id/weatherCardIndicator">

            <LinearLayout
                android:id="@+id/locationView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/apiTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dummyTitle"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/_15ssp"/>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/today"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/today"
            android:textColor="@color/textColor"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintTop_toBottomOf="@id/weatherCard"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tomorrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tomorrow"
            android:clickable="false"
            android:textColor="#D6996B"
            android:layout_marginStart="@dimen/_20sdp"
            app:layout_constraintStart_toEndOf="@id/today"
            app:layout_constraintTop_toTopOf="@id/today"
            app:layout_constraintBottom_toBottomOf="@id/today"/>

        <TextView
            android:id="@+id/day_after_tomorrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day_after_tomorrow"
            android:clickable="false"
            android:textColor="#D6996B"
            android:layout_marginStart="@dimen/_20sdp"
            app:layout_constraintStart_toEndOf="@id/tomorrow"
            app:layout_constraintTop_toTopOf="@id/tomorrow"
            app:layout_constraintBottom_toBottomOf="@id/tomorrow"/>

        <View
            android:id="@+id/separator"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="#E2A272"
            android:layout_marginTop="@dimen/_5sdp"
            app:layout_constraintTop_toBottomOf="@id/today"/>

        <View
            android:id="@+id/indicator"
            android:layout_width="@dimen/_15sdp"
            android:layout_height="@dimen/_5sdp"
            android:background="@drawable/indicator_dot_style"
            app:layout_constraintStart_toStartOf="@id/today"
            app:layout_constraintEnd_toEndOf="@id/today"
            app:layout_constraintTop_toTopOf="@id/separator"
            app:layout_constraintBottom_toBottomOf="@id/separator"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>